--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,17 +1,228 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".homeFragment">
+    android:padding="16dp">
 
+    <!-- Header Section -->
+
+    <LinearLayout
+        android:id="@+id/whole_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@drawable/header_home">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_margin="15dp">
+
+            <LinearLayout
+                android:id="@+id/header_section"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="16dp">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/greeting_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Hi, John"
+                        android:fontFamily="@font/righteous"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:id="@+id/greeting_subtext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Let's make this day productive!"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"/>
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/profile_icon"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/circle_background" />
+            </LinearLayout>
+
+
+            <!-- Learning Progress Section -->
+            <LinearLayout
+                android:id="@+id/learning_progress_section"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginTop="15dp"
+                android:layout_below="@id/header_section"
+                android:layout_marginBottom="16dp">
+
+                <TextView
+                    android:id="@+id/learning_progress_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Learning progress"
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/righteous"
+                    android:textColor="@color/black"/>
+
+                <TextView
+                    android:id="@+id/learning_level"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Intermediate"
+                    android:background="@drawable/level"
+                    android:textColor="@color/black"
+                    android:paddingVertical="5dp"
+                    android:paddingHorizontal="10dp"/>
+            </LinearLayout>
+
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:id="@+id/user_progress_bar"
+                android:progress="0"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_marginBottom="15dp"
+                android:progressDrawable="@drawable/user_progress"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+    <!-- Categories Section -->
+    <LinearLayout
+        android:id="@+id/categories_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/whole_header"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="25dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Categories"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/righteous"
+            android:layout_weight="1"
+            android:textColor="@color/black"/>
+
+        <LinearLayout
+            android:id="@+id/see_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SEE ALL"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:layout_marginRight="5dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_arrow_forward_ios_24"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <HorizontalScrollView
+        android:id="@+id/categories_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/categories_label"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:id="@+id/category_names"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/category_intro"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="Introduction"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:id="@+id/category_history"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="History"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:id="@+id/category_blockchain_net"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="Blockchain Networks"
+                android:textColor="@color/black"/>
+
+            <!-- Add more categories as needed -->
+        </LinearLayout>
+    </HorizontalScrollView>
+
+    <!-- Lessons Section -->
     <TextView
-        android:id="@+id/home"
+        android:id="@+id/lessons_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HOME"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"
-        android:textColor="@color/lavender"/>
+        android:text="Lessons"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/righteous"
+        android:layout_below="@id/categories_scroll"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="14dp"
+        android:textColor="@color/black"/>
+
+    <ScrollView
+        android:id="@+id/lessons_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/lessons_label"
+        android:fillViewport="true"
+        android:scrollbars="none"
+        android:background="@drawable/vprs_bg"
+        android:padding="20dp">
+
+        <LinearLayout
+            android:id="@+id/lesson_card_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- This container will be updated dynamically -->
+
+        </LinearLayout>
+
+    </ScrollView>
 </RelativeLayout>
