--- a/app/src/main/res/drawable/wave_footer.xml
+++ b/app/src/main/res/drawable/wave_footer.xml
@@ -13,6 +13,6 @@
 
         <!-- Closing the path at the bottom to fill the area under the curve -->
     <path
-        android:fillColor="#1E3A5F"
+        android:fillColor="@color/chatbg"
         android:pathData="M0,60 L20,40 L40,70 L60,30 L80,50 L100,30 L120,60 L140,20 L160,70 L180,40 L200,60 L220,30 L240,50 L260,20 L280,70 L300,40 L320,60 L340,30 L360,50 L380,20 L400,60 L400,100 L0,100 Z" />
 </vector>
