--- a/app/src/main/res/drawable/zigzag_pattern.xml
+++ b/app/src/main/res/drawable/zigzag_pattern.xml
@@ -14,7 +14,7 @@
 
     <!-- Fill the area above the reversed zigzag curve -->
     <path
-        android:fillColor="#1E3A5F"
+        android:fillColor="@color/chatbg"
         android:pathData="M0,50 L20,10 L40,90 L60,40 L80,80 L100,30 L120,70 L140,20 L160,60 L180,10 L200,50
         L200,0 L0,0 Z" /> <!-- Closing the top part to fill -->
 </vector>
