--- a/app/src/main/res/drawable/custom_progress_bar.xml
+++ b/app/src/main/res/drawable/custom_progress_bar.xml
@@ -2,15 +2,16 @@
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
             <corners android:radius="10dp" />
-            <solid android:color="@color/white" />
+            <solid android:color="#a9a9a9" />
             <size android:height="5dp" />
+            <stroke android:color="@color/black"/>
         </shape>
     </item>
     <item android:id="@android:id/progress">
         <clip>
             <shape android:shape="rectangle">
                 <corners android:radius="10dp" />
-                <solid android:color="@color/lavender" />
+                <solid android:color="@color/highlight" />
                 <size android:height="5dp" />
             </shape>
         </clip>
