--- a/app/src/main/res/drawable/edittext_background.xml
+++ b/app/src/main/res/drawable/edittext_background.xml
@@ -4,7 +4,7 @@
     <item android:state_focused="true">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/background_light" />
-            <stroke android:width="4dp" android:color="@color/gold" />
+            <stroke android:width="4dp" android:color="@color/highlight" />
             <corners android:radius="20dp" />
         </shape>
     </item>
@@ -13,7 +13,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@android:color/background_light" />
-            <stroke android:width="1dp" android:color="#CCCCCC" />
+            <stroke android:width="2dp" android:color="@color/black" />
             <corners android:radius="20dp" />
         </shape>
     </item>
