--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main2"
+    android:background="@color/card"
     tools:context=".login">
 
     <ImageView
@@ -37,9 +37,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hi there!"
-            android:textColor="@color/white"
+            android:textColor="@color/btn"
             android:textSize="34sp"
-            android:fontFamily="@font/montserrat_alternates_extrabold_italic"
+            android:textStyle="italic"
+            android:fontFamily="@font/righteous"
             android:gravity="center" />
 
         <TextView
@@ -47,9 +48,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Login to your account to continue."
-            android:textColor="@color/white"
+            android:textColor="@color/btn"
             android:textSize="20sp"
-            android:fontFamily="@font/baloo_thambi"
+            android:fontFamily="@font/righteous"
             android:gravity="center"
             android:layout_marginBottom="15dp" />
 
@@ -58,6 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
+            android:fontFamily="@font/righteous"
             android:inputType="textEmailAddress"
             android:drawableStart="@drawable/baseline_alternate_email_24"
             android:drawablePadding="5dp"
@@ -79,9 +81,9 @@
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/baseline_password_24"
                 android:drawablePadding="5dp"
-                android:fontFamily="@font/baloo_thambi"
                 android:background="@drawable/edittext_background"
                 android:hint="Password"
+                android:fontFamily="@font/righteous"
                 android:inputType="textPassword"
                 android:padding="15dp"
                 android:textColorHint="#A9A9A9" />
@@ -97,9 +99,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="@font/baloo_thambi"
+                android:fontFamily="@font/righteous"
                 android:text="Remember me"
-                android:textColor="@color/white" />
+                android:textColor="@color/btn" />
 
             <TextView
                 android:id="@+id/textView11"
@@ -108,19 +110,20 @@
                 android:layout_weight="1"
                 android:gravity="end"
                 android:layout_marginRight="10dp"
-                android:fontFamily="@font/baloo_thambi"
+                android:fontFamily="@font/righteous"
                 android:text="Forgot Password?"
-                android:textColor="@color/design_default_color_error" />
+                android:textColor="@color/btn" />
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fontFamily="@font/baloo_thambi"
+            android:fontFamily="@font/righteous"
             android:text="Login"
             android:textColor="@color/white"
             android:textSize="15sp"
+            android:textStyle="bold"
             android:layout_marginBottom="8dp"
             android:background="@drawable/button_bg"/>
 
@@ -137,7 +140,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Don't have an account?"
-                android:textColor="@color/white"
+                android:fontFamily="@font/righteous"
+                android:textColor="@color/btn"
                 android:gravity="center" />
 
             <TextView
@@ -145,7 +149,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Register"
-                android:textColor="@color/lavender"
+                android:fontFamily="@font/righteous"
+                android:textColor="@color/btn"
                 android:gravity="center"
                 android:layout_marginStart="8dp"/>
         </LinearLayout>
