--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="background"
-        android:scaleType="fitXY"
-        app:srcCompat="@drawable/launcher" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,11 +22,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:fontFamily="@font/baloo_thambi"
+            android:fontFamily="@font/righteous"
             android:outlineProvider="none"
             android:text="Crypto"
             android:textAlignment="center"
-            android:textColor="@color/gold"
+            android:textColor="@color/btn"
             android:textSize="55sp" />
 
         <TextView
@@ -41,11 +34,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:fontFamily="@font/baloo_thambi"
+            android:fontFamily="@font/righteous"
             android:outlineProvider="none"
             android:text="Learn"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@color/btn"
             android:textSize="55sp" />
 
     </LinearLayout>
@@ -69,22 +62,23 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/begin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/gold"
+            android:textColor="@color/btn"
             android:text="Begin Your Crypto Journey"
             android:gravity="center"
             android:textSize="30sp"
-            android:fontFamily="@font/baloo_thambi"/>
+            android:fontFamily="@font/righteous"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="@color/btn"
             android:text="Crypto education shaping future!"
             android:gravity="center"
             android:textSize="18sp"
-            android:fontFamily="@font/baloo_thambi"/>
+            android:fontFamily="@font/righteous"/>
 
         <LinearLayout
             android:id="@+id/proceedBar"
@@ -100,7 +94,7 @@
                 android:text="0 %"
                 android:id="@+id/text_view"
                 android:textSize="25sp"
-                android:textColor="@color/gold"/>
+                android:textColor="@color/btn"/>
             <ProgressBar
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
