--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -20,7 +20,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/toolbar"
             android:elevation="3dp"
-            android:layout_margin="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="3dp"
             app:titleTextColor="@color/btn"
             android:background="@drawable/title_coin"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
