--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,6 +95,7 @@
                 android:fontFamily="@font/righteous"
                 android:id="@+id/text_view"
                 android:textSize="25sp"
+                android:layout_marginBottom="5dp"
                 android:textColor="@color/btn"/>
             <ProgressBar
                 android:layout_width="match_parent"
