--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/lessons_scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -56,11 +57,15 @@
                         android:textColor="@color/black" />
                 </LinearLayout>
 
-                <ImageView
+                <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/profile_icon"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:src="@drawable/circle_background" />
+                    app:strokeColor="@color/highlight"
+                    app:strokeWidth="6dp"
+                    android:src="#a9a9a9"
+                    android:padding="5dp"
+                    app:shapeAppearanceOverlay="@style/roundedImageView"/>
             </LinearLayout>
 
             <!-- Learning Progress Section -->
